--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@worldcoin/idkit": "^0.5.1",
     "connectkit": "^1.4.0",
     "ethers": "5.7.2",
+    "ipfs-http-client": "^60.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "starknet": "^5.24.3",
     "viem": "^1.18.4",
     "wagmi": "^1.4.5",
     "web-vitals": "^2.1.4",
@@ -34,10 +36,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -53,9 +52,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "eslintIgnore": [
     "node_modules",
