--- a/package.json
+++ b/package.json
@@ -5,29 +5,20 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
-    "@huddle01/auth": "^0.0.1",
-    "@huddle01/react": "^0.0.11",
-    "@polybase/auth": "^0.6.1",
-    "@polybase/client": "^0.6.1",
-    "@polybase/eth": "^0.6.1",
-    "@polybase/react": "^0.6.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@web3modal/wagmi": "^3.2.0",
-    "@worldcoin/idkit": "^0.5.1",
-    "connectkit": "^1.4.0",
+    "buffer": "^6.0.3",
+    "dotenv": "^16.3.1",
     "ethers": "5.7.2",
     "ipfs-http-client": "^60.0.1",
+    "nft.storage": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "starknet": "^5.24.3",
-    "viem": "^1.18.4",
-    "wagmi": "^1.4.5",
-    "web-vitals": "^2.1.4",
-    "web3modal": "1.9.12"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,7 +42,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.5"
   },
   "eslintIgnore": [
     "node_modules",
